k8s-Manifests/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nagham-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nagham-redis
  template:
    metadata:
      labels:
        app: nagham-redis
    spec:
      containers:
      - name: redis
        image: redis:7.0.11-alpine  # Use official Redis image here
        ports:
        - containerPort: 6379
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: nagham-redis
spec:
  selector:
    app: nagham-redis
  ports:
    - port: 6379
      targetPort: 6379
  clusterIP: None
